# Weatherdan

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  log_config.yaml  pyproject.toml  run.py
.github/workflows/: publishing.yaml
common/: __init__.py  console.py  manual.py  settings.py  statistics.py  storage.py
common/services/: __init__.py  ecowitt.py  exceptions.py
ecowitt/: __init__.py  __main__.py  exceptions.py  service.py  settings.py
importer/: __init__.py  __main__.py
notifications/: __main__.py
readings/: __main__.py
static/: scripts.js
static/css/: custom-bulma-light.css  custom-bulma.css  styles.css
static/js/: bulma-navbar.js  humidity.js  pressure.js  rainfall.js  scripts.js  solar.js  temperature.js  uv-index.js  wind.js
templates/: base.jinja  current.html.jinja  dashboard.html.jinja  editor.html.jinja  filtered.html  historical.html.jinja  index.html  index.html.jinja  latest.html  rainfall.html.jinja  solar.html.jinja  user.html  uv-index.html.jinja  wind.html.jinja
templates/components/: chart.jinja  footer.jinja  form_box.jinja  forms.jinja  navbar.jinja
templates/humidity/: current.html.jinja  historical.html.jinja
templates/pressure/: current.html.jinja  historical.html.jinja
templates/rainfall/: current.html.jinja  historical.html.jinja
templates/solar/: current.html.jinja  historical.html.jinja
templates/temperature/: current.html.jinja  historical.html.jinja
templates/uv-index/: current.html.jinja  historical.html.jinja
templates/wind/: current.html.jinja  historical.html.jinja
weatherdan/: __init__.py  __main__.py  console.py  constants.py  controller.py  database.py  models.py  schemas.py  settings.py  storage.py  utils.py
weatherdan/database/: __init__.py  enum_converter.py  tables.py
weatherdan/ecowitt/: category.py  schemas.py  service.py
weatherdan/routers/: api.py  html.py
weatherdan/routers/api/: __init__.py  humidity.py  pressure.py  rainfall.py  solar.py  temperature.py  timeframe.py  uv_index.py  wind.py
weatherdan/routers/html/: __init__.py  humidity.py  pressure.py  rainfall.py  solar.py  temperature.py  uv_index.py  wind.py
weatherdan/routing/: api.py  html.py
weatherdan/services/: __init__.py  ecowitt.py
web_interface/: __init__.py  __main__.py  controller.py  responses.py  schemas.py
web_interface/controllers/: reading.py
web_interface/models/: stats.py  user.py
web_interface/routers/: api.py  html.py
web_interface/routing/: api.py  html.py
website/: __main__.py  controller.py  schemas.py
website/routing/: api.py  html.py
