[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.103.2",
  "jinja2 >= 3.1.2",
  "pony >= 0.7.17",
  "pydantic >= 2.4.2",
  "ratelimit >= 2.2.1",
  "requests >= 2.31.0",
  "rich >= 13.6.0",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.23.2"
]
description = "Rainfall tracking system using Ecowitt."
dynamic = ["version"]
keywords = []
license = {text = "MIT"}
name = "weatherdan"
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
  "pre-commit >= 3.4.0"
]

[project.scripts]
Weatherdan = "run:main"

[project.urls]
Documentation = "https://github.com/Buried-In-Code/Weatherdan#readme"
Issues = "https://github.com/Buried-In-Code/Weatherdan/issues"
Source = "https://github.com/Buried-In-Code/Weatherdan"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.hatch.version]
path = "weatherdan/__init__.py"

[tool.ruff]
fix = true
ignore = [
  "D",
  "EXE",
  "FBT",
  "PLR2004",
  "TCH",
  "TRY300"
]
line-length = 100
output-format = "grouped"
select = ["ALL"]
show-fixes = true
target-version = "py312"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.per-file-ignores]
"weatherdan/routers/*" = ["B008"]

[tool.ruff.pydocstyle]
convention = "google"
