[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "BuriedInCode@tuta.io", name = "BuriedInCode"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = [
  "fastapi >= 0.104.1",
  "jinja2 >= 3.1.2",
  "pydantic >= 2.5.2",
  "ratelimit >= 2.2.1",
  "requests >= 2.31.0",
  "rich >= 13.7.0",
  "sqlmodel>=0.0.19",
  "tomli-w >= 1.0.0",
  "uvicorn >= 0.24.0"
]
description = "Rainfall tracking system using Ecowitt."
dynamic = ["version"]
keywords = []
license = {text = "MIT"}
name = "weatherdan"
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
postgres = [
  "psycopg >= 3.1.19"
]

[project.scripts]
Weatherdan = "run:main"

[project.urls]
Issues = "https://github.com/Buried-In-Code/Weatherdan/issues"
Source = "https://github.com/Buried-In-Code/Weatherdan"

[tool.hatch.version]
path = "weatherdan/__init__.py"

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812",
  "D",
  "DTZ",
  "EXE",
  "FBT",
  "PLR2004",
  "TCH"
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"weatherdan/routers/*" = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.rye]
dev-dependencies = [
  "pre-commit >= 3.7.1"
]
